# food-security-pipeline

./: .gitignore  index.html  manifest.webmanifest  pyproject.toml  world.geojson
_app/: version.json
_app/immutable/assets/: _layout.BfVfaYFc.css
_app/immutable/chunks/: AccordionItem.B13lzNlU.js  AccordionItem.CNoYCgnD.js  AreaMap.BDqHXoid.js  BarChart.BPB-cUoI.js  BigValue.BYzmFFfH.js  Button.CFo4cLUb.js  LineChart.-ZdynWx_.js  LineChart.CfxDwx_C.js  Value.CcRBK5G0.js  Value.odEfF2Fl.js  VennDiagram.svelte_svelte_type_style_lang.C_ezGKFc.js  VennDiagram.svelte_svelte_type_style_lang.g7EbO4ob.js  button.CINbfvFT.js  button.D6nixP0u.js  duckdb-browser-eh.worker.BUtCoqmO.js  duckdb-browser-mvp.worker.C3mI3911.js  duckdb-mvp.DD2WH_C4.js  entry.BDWoJMlz.js  leaflet-src.BSlGHVNq.js  leaflet-src.DXMykcUU.js  prism-svelte.0F53GwKQ.js  (+4 more)
api/: evidencemeta.json  pagesManifest.json
api/backup/: evidencemeta.json
api/comparison/: evidencemeta.json
api/country-detail/: evidencemeta.json
api/trends/: evidencemeta.json
backup/: index.html
comparison/: index.html
country-detail/: index.html
dashboard/: evidence.config.yaml  package-lock.json  package.json
dashboard/pages/: +layout.svelte  comparison.md  country-detail.md  index.md  trends.md
food-security-pipeline/: index.html
food-security-pipeline/comparison/: index.html
food-security-pipeline/country-detail/: index.html
food-security-pipeline/data/: manifest.json
notebooks/: phase0_spike.ipynb
pipeline/: pipeline.yml
pipeline/seeds/: countries.csv  generate_countries_seed.py
trends/: index.html
(+80 files in other folders)
