[project]
name = "food-security"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bruin-sdk>=0.5.0",
    "country-converter>=1.3.2",
    "duckdb>=1.5.2",
    "pandas>=3.0.2",
    "requests>=2.33.1",
    "wbgapi>=1.0.14",
]
